# multiplayer-api

./: .env  Cargo.toml  Dockerfile  README.md
src/: error.rs  lib.rs  main.rs
src/auth/: mod.rs  password.rs
src/db/models/: user.rs
src/handlers/: users.rs
src/repositories/: mod.rs  traits.rs  users.rs
src/repositories/sql/: create_user.sql  delete_user.sql  mod.rs  read_user.sql  update_user.sql
src/services/: mod.rs  traits.rs  users.rs
