[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros"] }

# Async runtime
tokio = { version = "1.46.1", features = ["full", "rt-multi-thread"] }
async-trait = { version = "0.1.88" }

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "chrono"] }

# Serialization
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }

# Time/date handling
chrono = { version = "0.4.41", features = ["serde"] }

# Security
bcrypt = { version = "0.17.0" }
jsonwebtoken = { version = "9.3.1" }
dotenvy = { version = "0.15.7" }

# Logging and tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }